# PyRake

./: CLAUDE.md  README.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
pyrake/: __init__.py  core.py  distance_metrics.py  estimators.py  exceptions.py  frontier.py  numerical_helpers.py  optimization.py  phase1.py  phase1solvers.py  rake.py  visualizations.py
pyrake/calibration/: __init__.py  frontier.py  phase1solvers.py  rake.py  visualizations.py
pyrake/estimation/: __init__.py  base_classes.py  estimators.py  linear_combination.py  population.py  sensitivity_solvers.py  treatment_effects.py  visualizations.py
pyrake/optimization/: CLAUDE.md  USAGE.md  __init__.py  linear_programs.py  numerical_helpers.py  optimization.py  quadratic_programs.py
test/: test_distance_metrics.py  test_estimators.py  test_frontier.py  test_numerical_helpers.py  test_phase1solvers.py  test_rake.py
test/calibration/: test_distance_metrics.py  test_frontier.py  test_phase1solvers.py  test_rake.py
test/estimation/: test_estimators.py  test_linear_combination.py  test_population.py  test_treatment_effects.py
test/optimization/: test_linear_programs.py  test_numerical_helpers.py  test_optimization.py  test_quadratic_programs.py
