[project]
name = "pyrake"
version = "0.1.0"
description = "Balancing Weights and Raking"
authors = [{ name = "Bob Wilson", email = "bob.wilson@convexanalytics.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
dependencies = [
    "numpy>=2.2.5,<3",
    "scipy>=1.15.2,<2",
    "matplotlib>=3.10.1,<4",
    "pandas>=2.3.1,<3",
    "seaborn>=0.13.2,<0.14",
    "typing-extensions>=4.15.0,<5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "black>=25.1.0,<26",
    "ruff>=0.11.6,<0.12",
    "mypy>=1.14.0,<2",
    "pandas-stubs>=2.2.0,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Black configuration
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff configuration
[tool.ruff]
# Set line length to match black
line-length = 88
target-version = "py311"

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable recommended rules plus additional useful ones
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "NPY",    # numpy-specific rules
    "RUF",    # ruff-specific rules
]

# Ignore specific rules that may conflict with scientific computing practices
ignore = [
    "E501",   # Line too long (handled by black)
    "E741",   # Ambiguous variable name (common in math: l, I, O)
    "N803",   # Argument name should be lowercase (allows single-letter math vars)
    "N806",   # Variable in function should be lowercase (allows math notation like M, N, X)
    "NPY002", # Allow numpy.random.Generator for newer code
    "SIM108", # Use ternary operator (sometimes clearer to use if-else)
]

# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Test files can have longer lines, assert statements, magic values
"test/**/*.py" = [
    "B011",   # Don't require assertRaises for tests
    "N802",   # Function name should be lowercase (test class methods can be camelCase)
]

[tool.ruff.lint.isort]
# Configure import sorting to match your project structure
known-first-party = ["pyrake"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pydocstyle]
# Use numpy-style docstrings
convention = "numpy"

[tool.ruff.format]
# Use black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# Mypy configuration
[tool.mypy]
# Python version
python_version = "3.11"

# Import discovery
files = ["pyrake", "test"]
mypy_path = "$MYPY_CONFIG_FILE_DIR"
namespace_packages = true
explicit_package_bases = true

# Platform configuration
platform = "darwin"

# Strictness settings - progressive approach
# Start with moderate strictness, can be increased over time
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = false  # Set to true once codebase is mostly typed
disallow_subclassing_any = true
disallow_untyped_calls = false  # Set to true for stricter checking
disallow_untyped_decorators = false  # Common in scientific code
disallow_untyped_defs = false  # Set to true once codebase is mostly typed
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = false  # Scientific libraries often use Any
warn_unused_configs = true
warn_unused_ignores = true

# Error messages
pretty = true
show_error_codes = true
show_error_context = true

# Miscellaneous strictness flags
strict_equality = true
extra_checks = true

# Warnings
warn_unreachable = true
warn_no_return = true

# Per-module options for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "matplotlib.*",
    "seaborn.*",
]
ignore_missing_imports = true

# Test files can be less strict
[[tool.mypy.overrides]]
module = "test.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
